welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:5: error: not found: value num
			sol=num(i)
                            ^