welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	var sol=0
	for (i <- 0 to nums.length-1) {
		if(sol<nums(i)) {
			sol=num(i)
		}	
	}
	return sol
}

